# caLANdar

./: .env.example  .gitignore  .kodiak.toml  .pre-commit-config.yaml  .prettierignore  ADMIN_SEAT_OCCUPANCY_GUIDE.md  ADMIN_SEAT_OCCUPANCY_SUMMARY.md  ADMIN_SEAT_OCCUPANCY_UI.md  ATTENDANCE_ENCODING_REFERENCE.md  EMAIL_MIGRATION.md  GAME_SCHEDULE_IMPLEMENTATION_PLAN.md  GAME_SCHEDULE_SLICE1_SUMMARY.md  GAME_SCHEDULE_TECHNICAL_ANALYSIS.md  INTEGRATION_TESTS.md  Justfile  README.md  ROOMS_AND_SEATS.md  RSVP_WIZARD_DOCUMENTATION.md  RSVP_WIZARD_FEATURE_REQUEST.md  SEAT_MAP_FEATURE.md  SEAT_RESERVATIONS.md  SEAT_SELECTION_DEVELOPER_GUIDE.md  SEAT_SELECTION_SUMMARY.md  SEAT_SELECTION_USER_GUIDE.md  TESTING.md  bors.toml  caLANdar.code-workspace  demo_integration_tests.sh  docker-compose.yml  flake.nix  heroku.yml  package-lock.json
api/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cloudrun  FRAMEWORK_SEPARATION.md  Secrets.toml  Secrets.toml.template  rust-toolchain.toml  sqlx-data.json
api/.sqlx/: query-007651aa451b134500907d0a231d5b38521f198eb5dfb1e5851e46def7f0f73b.json  query-00eb5feaa0a28ccd382e62ebfada1c3a9cd57363b64ec8f1b6bc0cf34d843151.json  query-01348ea844553324b8ebff374b090463ba3a0f45e158b556c2f446f47cff113e.json  query-0333bfaaf2a978f601ce99f08dff74a0265ce53c08dd5992c524146dd233ec01.json  query-03a0a303a06ecef0b3927b6a27431caca2a909dc00618bf3ba28a44ce03a77f0.json  query-0601f4b9ee749cffd8a4e71d3f81c46fea91e78f32e9c55383948382b3019aa4.json  query-07e62b080405157fa37c8240129445380aee359b8fcc6b068ab6d152154ab4c9.json  query-0864477e98814dd5bbfb7f5f7158621df548e5b013851e45f4519490fc253bae.json  query-0b0d160b4a0e788d23f9e7e51b6ff6f4d78ab217851cdd70b2dc3195d2324ceb.json  query-0b54c6d69990ae1cc4d5bd7279f6a3b6184f94995c4718de6f0cb8b0ebf95b1b.json  query-0f3a07bff66fd938eef69de181b229f07debfba620adcbcd7ec32c36d7fc42c5.json  query-100f8ea802319d85629c733a677ff10a1ec2669d702ba1063bf8473a9e6d679d.json  query-102e5763bf5e4c9369af8718560f44295909357596471696a9a74f7d92a5cf0d.json  query-120a23ba649aea56590388c05c3c1b4d4c12dd20f23119e8f093e41f5df21a89.json  query-15c83f37b2d85deb9819afa5e79813808fd95be668acec8dd7fa7e1fb5d76f7e.json  query-19558574c7791ee5791314d26013a669627b3ce0782b395bc3242e3b5aa41e92.json  query-19e94b7ab58cf82d33cf3ec35043c3876039ccb065efcc5eb5dbfe32838b6b1e.json  query-1cde723362bb52420284e202a0991ddf126b0044a1e4ccf14c35d02be6f693d4.json  query-2628812e11d2583e20aef5ac37175d199f1ca1879a5872edf03ec10cad7aa45a.json  query-2c80b9ea03fbc6a3d6c203585f6895346c6c9a290105bbb22679ab1949d84382.json  query-2d3561cffd3585372d066f6e04592cf1c5dfe9cc161b5341885b684574edcd62.json  query-3a39bed2206124e4a4eb67bcbb45ece7fb0fd2e84a85c8618e2f59edb65dc9f8.json  query-3b5da869fe381b48a3fb794c7ff5b1a9d5b26a0621ea532ba7b7834dcc57d55b.json  query-3d2fa128d815aae000fcdd79c2375acdbe81e1c96c9536c2d276a7292bfa84ab.json  query-3ddb507d9aa45aad3a808430644249ffc69158691f54896670fcec2653d45e30.json  query-3e17bda05146f12c2cd796c7d3c17edd0214f39644d0967e31535300709a09c4.json  query-3f08555c2c6394ec85aaf1fa10dc5e7e42a2878d8f48bc0a45ed02099e033784.json  query-3fbd3a877cebfbda6b697e1e3998b548da5c105a399c4d8f4af88f82323426cc.json  (+78 more)
(+289 files in other folders)
