[package]
name = "calandar-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.30"
shuttle-rocket = "0.56.0"
shuttle-runtime = "0.56.0"
shuttle-shared-db = { version = "0.56.0", features = ["postgres", "sqlx"] }
log = "0.4.28"
resend-rs = "0.17"
rocket = { version = "0.5.0", features = [ "json" ] }
rocket_dyn_templates = { version = "0.2.0", features = [ "tera" ] }
schemars = { version = "0.8.22", features = [ "chrono", "bytes" ] }
okapi = { version = "0.7.0-rc.1" }
reqwest = { version = "0.12.23", features = [ "json" ] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", features = ["swagger"] }
rusty_paseto = { version = "0.7.2", features = ["batteries_included"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
tokio = { version = "1.47.1", features = ["full"] }
