[package]
name = "calandar-api"
version = "0.1.0"
edition = "2021"

# Note: The `home` crate (transitive dependency via sqlx) is pinned to 0.5.11
# in Cargo.lock to maintain compatibility with Rust 1.87.0.
# Versions 0.5.12+ require Rust 1.88.
# Run: cargo update home --precise 0.5.11

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
futures = "0.3.30"
rand = "0.9.2"
log = "0.4.29"
md5 = "0.8.0"
resend-rs = "0.19"
rocket = { version = "0.5.0", features = [ "json" ] }
rocket_dyn_templates = { version = "0.2.0", features = [ "tera" ] }
schemars = { version = "0.8.22", features = [ "chrono", "bytes" ] }
okapi = { version = "0.7.0-rc.1" }
reqwest = { version = "0.13.1", features = [ "json" ] }
rocket_okapi = { git = "https://github.com/GREsau/okapi", features = ["swagger"] }
rusty_paseto = { version = "0.9.0", features = ["batteries_included"] }
sqlx = { version = "0.8.6", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
tokio = { version = "1.49.0", features = ["full"] }
